# home

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  api.py  commandable.py  config.toml  docker-compose.yml  home.py  install.sh  main.py  pyproject.toml
.forgejo/workflows/: deploy.yml
.github/workflows/: deploy.yml
home-ui/: .dockerignore  Dockerfile  package-lock.json  package.json
home-ui/src/app/: EntityTab.tsx  LightCard.tsx  MediaPlayerControllerCard.tsx  SpeakerCard.tsx  TokenSettings.tsx  layout.tsx  page.tsx
home-ui/src/app/lights/: page.tsx
home-ui/src/lib/: api.ts  auth.ts
homeassistant/: client.py  climate.py  commandable.py  door.py  light.py  merge_args.py  speaker.py  thermostat.py  vacuum.py
homeassistant/test/: test_client.py  test_climate.py  test_light.py  test_speaker.py
infra/: deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/caddy/: Caddyfile  Dockerfile
infra/tailscale/: home-serve.json
