[tool.poetry]
name = "home"
version = "0.1.0"
description = ""
authors = ["Tamjid Rahman <tamjidarrahman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
typer = "^0.12.5"
requests = "^2.32.3"

[tool.poetry.scripts]
home = "home:app"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
